[FIX] Fix radio/checkbox vertical alignment on webkit browsers.

--- a/style/form.khtml.all.css
+++ b/style/form.khtml.all.css
@@ -16,9 +16,8 @@ input[type="radio"],
 input[type="checkbox"] {
 	vertical-align: bottom;
 }
-
-label.nocmx input[type="radio"],
-label.nocmx input[type="checkbox"] {
+label input[type="radio"],
+label input[type="checkbox"] {
 	vertical-align: baseline;
 }
 
